--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{layout :: html(~{::title}, ~{::div})}">
+<html lang="en" th:replace="~{layout :: html(~{::title}, ~{::div})}"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Customers - Customer Order Management</title>
 </head>
@@ -8,7 +8,7 @@
 <div>
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2><i class="fas fa-users text-primary"></i> Customers</h2>
-        <a href="/customers/new" class="btn btn-primary">
+        <a class="btn btn-primary" href="/customers/new">
             <i class="fas fa-plus"></i> Add New Customer
         </a>
     </div>
@@ -36,21 +36,21 @@
                         <td th:text="${customer.address}"></td>
                         <td>
                             <div class="btn-group" role="group">
-                                <a th:href="@{/customers/edit/{id}(id=${customer.id})}"
-                                   class="btn btn-sm btn-outline-primary" title="Edit Customer">
+                                <a class="btn btn-sm btn-outline-primary"
+                                   th:href="@{/customers/edit/{id}(id=${customer.id})}" title="Edit Customer">
                                     <i class="fas fa-edit"></i>
                                 </a>
-                                <a th:href="@{/customers/{id}/orders(id=${customer.id})}"
-                                   class="btn btn-sm btn-outline-info" title="View Orders">
+                                <a class="btn btn-sm btn-outline-info"
+                                   th:href="@{/customers/{id}/orders(id=${customer.id})}" title="View Orders">
                                     <i class="fas fa-shopping-cart"></i>
                                 </a>
-                                <a th:href="@{/orders/new(customerId=${customer.id})}"
-                                   class="btn btn-sm btn-outline-success" title="Add Order">
+                                <a class="btn btn-sm btn-outline-success"
+                                   th:href="@{/orders/new(customerId=${customer.id})}" title="Add Order">
                                     <i class="fas fa-plus"></i>
                                 </a>
-                                <a th:href="@{/customers/delete/{id}(id=${customer.id})}"
-                                   class="btn btn-sm btn-outline-danger" title="Delete Customer"
-                                   onclick="return confirm('Are you sure you want to delete this customer and all their orders?')">
+                                <a class="btn btn-sm btn-outline-danger"
+                                   onclick="return confirm('Are you sure you want to delete this customer and all their orders?')" th:href="@{/customers/delete/{id}(id=${customer.id})}"
+                                   title="Delete Customer">
                                     <i class="fas fa-trash"></i>
                                 </a>
                             </div>
